--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,8 @@
 .idea/**/usage.statistics.xml
 .idea/**/dictionaries
 .idea/**/shelf
+.idea/
+CardGame.iml
 
 # Generated files
 .idea/**/contentModel.xml
