--- a/pom.xml
+++ b/pom.xml
@@ -23,16 +23,8 @@
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <version>RELEASE</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.junit.jupiter</groupId>
-            <artifactId>junit-jupiter</artifactId>
-            <version>RELEASE</version>
+            <version>4.11</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
-
-
 </project>
